--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html#s1">Qui suis-je ?</a></li>
                 <li><a href="maFormation.html">Ma Formation</a></li>
                 <li><a href="index.html#s3">Mes compétences</a></li>
-                <li><a href="#">Mes projets</a></li>
+                <li><a href="mesProjet.html">Mes projets</a></li>
             </ul>
             <a href="#openModal1" class="buttonOrange" class="openModalBtn">Contactez-moi</a>
         </nav>
