--- a/maFormation.html
+++ b/maFormation.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html#s1">Qui suis-je ?</a></li>
                 <li><a href="maFormation.html">Ma Formation</a></li>
                 <li><a href="maFormation.html#s3">Mes compétences</a></li>
-                <li><a href="#">Mes projets</a></li>
+                <li><a href="mesProjet.html">Mes projets</a></li>
             </ul>
             <a href="#openModal1" class="buttonOrange" class="openModalBtn">Contactez-moi</a>
         </nav>
@@ -32,15 +32,15 @@
     <section id="s2">
         <article>
             <h3>Description de la formation</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium consectetur eos aliquam iusto vel quaerat sint eveniet quae error amet pariatur nam numquam eum, ullam laboriosam assumenda odio, suscipit tempore?</p>
         </article>
         <img src="/Jhon-Doe/img/dev-a-la-carte.png" alt="">
     </section>
-    <section id="s3">
-        <h2></h2>
-        <div>
+    <section id="s3" class="container-1440">
+        <!-- <div> -->
             <h3>Les compétences développés</h3>
-        </div>
+        <!-- </div> -->
         <article id="liste-deroulente">
             <div>
                 <ul>
