--- a/maFormation.html
+++ b/maFormation.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/maFormation.css">
+    <script src="https://kit.fontawesome.com/2bb90c57b5.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -13,6 +14,7 @@
             <p>Développeur Web et Web Mobile</p>
         </div>
         <nav>
+            <a href="#"><i class="fa-solid fa-bars burgerMenu"></i></a>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="index.html#s1">Qui suis-je ?</a></li>
@@ -144,10 +146,9 @@
     <section id="s4" class="container-1440">
         <div>
             <h2>Mais Projets</h2>
-            <a href="https://github.com/MaxCordiau?tab=repositories" class="buttonDarkBlue">Voir tous les projets</a>
         </div>
         <div>
-            <article>
+            <article class="frontend">
                 <img src="img/projet1.PNG" alt="">
                 <h3>Home Key - Intégration HTML & CSS</h3>
                 <p>
@@ -158,7 +159,7 @@
                 </p>
                 <a href="https://maxcordiau.github.io/HomeKey/" class="buttonDarkBlue">Lire la suite</a>
             </article>
-            <article>
+            <article class="frontend">
                 <img src="img/projet2.PNG" alt="">
                 <h3>Vividly - Intégration Mobile First</h3>
                 <p>
@@ -180,6 +181,9 @@
                 </p>
                 <a href="index.html" class="buttonDarkBlue">Lire la suite</a>
             </article>
+        </div>
+        <div>
+            <a href="https://github.com/MaxCordiau?tab=repositories" class="buttonDarkBlue">Voir tous les projets</a>
         </div>
     </section>
     <footer>
