--- a/mesProjet.html
+++ b/mesProjet.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/mesProjet.css">
+    <script src="https://kit.fontawesome.com/2bb90c57b5.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -13,6 +14,7 @@
             <p>Développeur Web et Web Mobile</p>
         </div>
         <nav>
+            <a href="#"><i class="fa-solid fa-bars burgerMenu"></i></a>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="index.html#s1">Qui suis-je ?</a></li>
@@ -70,8 +72,6 @@
                 </p>
                 <a href="index.html" class="buttonDarkBlue">Lire la suite</a>
             </article>
-        </div>
-        <div>
             <article>
                 <div>
                     <img src="img/projet1.PNG" alt="">
